2002-04-03  Woodrow Setzer  <setzer.woodrow@epa.gov>

	* lsoda.Rd: fixed another link (nls)

	* lsoda.Rd: fixed link for gnls to point to nlme package

2002-04-02  Woodrow Setzer  <setzer.woodrow@epa.gov>

	* lsoda.Rd:
	arg was 'jacfunc', documented arg was 'jac', changed to 'jacfunc'

	* lsoda.Rd: removed reference to nlme in demo directory.  next version.

2002-04-02  Woodrow Setzer  <setzer.woodrow@epa.gov>

	* demo/CCL4model.R: redefine 'concentrations'

	* ChangeLog: minor cleanup

	* DESCRIPTION:
	updated dependency, date, version number, compiled code capability

	* INDEX: updated data set descriptions

	* data/00Index: added one-line descriptions

	* man/lsoda.Rd:
	arg was 'jacfunc', documented arg was 'jac', changed to 'jacfunc'

	* demo/CCL4model.R: refined the gnls example.

	* demo/00Index: removed nlme demo from index

	* man/lsoda.Rd:
	removed reference to nlme in demo directory.  next version.

	* src/odesolve_utils.c:
	added format to calls to error and warning in rstop and rwarn

2002-04-02  Woodrow Setzer  <setzer.woodrow@epa.gov>

	* DESCRIPTION:
	updated dependency, date, version number, compiled code capability

	* INDEX: updated data set descriptions

	* data/00Index: added one-line descriptions

	* man/lsoda.Rd:
	arg was 'jacfunc', documented arg was 'jac', changed to 'jacfunc'

	* demo/CCL4model.R: refined the gnls example.

	* demo/00Index: removed nlme demo from index

	* man/lsoda.Rd:
	removed reference to nlme in demo directory.  next version.

	* src/odesolve_utils.c:
	added format to calls to error and warning in rstop and rwarn

2002-03-29  Woodrow Setzer  <setzer.woodrow@epa.gov>

	* demo/00Index: added nlme example, and dropped .R extension

2002-03-28  Woodrow Setzer  <setzer.woodrow@epa.gov>

	* man/ccl4data.Rd: update data description

	* man/lsoda.Rd: editing help file.

	* man/lsoda.Rd: problems with compiling the help file.

	* man/lsoda.Rd: Fixed docs to include compiled code.
