@@ -1,0 +1,25 @@
+#include <windows.h>
+#include "Rversion.h"
+
+VS_VERSION_INFO VERSIONINFO
+FILEVERSION R_FILEVERSION
+PRODUCTVERSION 3,0,0,0
+FILEFLAGSMASK 0x3L
+FILEOS VOS__WINDOWS32
+FILETYPE VFT_APP
+BEGIN
+    BLOCK "StringFileInfo"
+    BEGIN
+        BLOCK "040904E4"
+        BEGIN
+            VALUE "FileDescription", "DLL for R package `odesolve'\0"
+            VALUE "FileVersion", "0.5-7.1\0"
+            VALUE "Compiled under R Version", R_MAJOR "." R_MINOR " (" R_YEAR "-" R_MONTH "-" R_DAY ")\0"
+            VALUE "Project info", "http://www.r-project.org\0"
+        END
+    END
+    BLOCK "VarFileInfo"
+    BEGIN
+        VALUE "Translation", 0x409, 1252
+    END
+END
